# Chess

./: .gitignore  CMakeLists.txt  LICENSE  todolist.txt
build2/: CMakeCache.txt  Makefile  cmake_install.cmake
include/: Board.h  Game.h  Move.h  MoveGenerator.h  Piece.h  Player.h  StockfishWrapper.h  Utility.h
networking/: client.cpp  server.cpp
src/: Board.cpp  Game.cpp  Move.cpp  Piece.cpp  Player.cpp
